--- a/angular.json
+++ b/angular.json
@@ -29,9 +29,9 @@
             ],
             "styles": [
               "./src/assets/styles/bootstrap.css",
-            
               "./src/assets/styles/hover.css",
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "./src/assets/styles/admin.css",            
               "src/styles.scss"
             ],
             "scripts": []
